# HW_19_2

./: data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: first_add.py
catalog/migrations/: 0001_initial.py
config/: settings.py
