[tool.poetry]
name = "django-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_1"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
pytest = "^7.3.1"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

